--- a/custom_theme/main.html
+++ b/custom_theme/main.html
@@ -2,19 +2,10 @@
 
 {% block announce %}
 
-    <strong>Fund this project</strong> through
-    <a href="{{ 'insiders/#how-to-become-a-sponsor' | url }}"><strong>sponsorship</strong></a>
+    <strong>Fund this project</strong> through <strong>sponsorship</strong>
     <span class="twemoji heart pulse">
       {% include ".icons/octicons/heart-fill-16.svg" %}
-    </span> &mdash;
-
-  Follow
-  <strong>@pawamoy</strong> on
-  <a rel="me" href="https://fosstodon.org/@pawamoy">
-    <span class="twemoji mastodon">
-      {% include ".icons/fontawesome/brands/mastodon.svg" %}
     </span>
-    <strong>Fosstodon</strong>
-  </a>
+
   for updates
 {% endblock %}
